--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<!-- Creating Navigation Bar -->
-	<nav class="navbar navbar-fixed-top" id="hippoNav">
+	<nav class="navbar navbar-fixed-top hippoNav">
 		<div class="container">
 			<div class="navbar-header">
 				<a class="navbar-brand" id="hippoBrand" href="/">Smallroundears <img id="hippoLogo" src="images/hippologo.svg" alt="Hippo Logo" /></a>
@@ -42,6 +42,16 @@
 	<div ng-view>
 	</div>
 
+	<!-- Creating Footer for all pages -->
+	<footer class="hippoNav">
+		<div class="container">
+			<a href="#">Links</a>
+			<a href="mailto:futoisaru@gmail.com">Contact Us</a>
+			<p>Created by Sean Thomas</p>
+		</div>
+	</footer>
+
+	<!-- Link my javascript files -->
 	<script src="js/app.js"></script>
 	<script src="js/controller.js"></script>
 
