Altered some tags to be semantic

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 	</nav>
 
 	<!-- Show external pages-->
-	<div ng-view>
-	</div>
+	<section ng-view>
+	</section>
 
 	<!-- Creating Footer for all pages -->
 	<footer class="hippoNav">
