Added info page and small semantic change

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <!-- Menu -->
             <ul id="hippoNavList" class="nav navbar-nav navbar-right collapse navbar-collapse">
                  <li><a href="/">Home</a></li>
-                 <li><a href="#">Info</a></li>
+                 <li><a href="/info">Info</a></li>
                  <li><a href="#">Media</a></li>
                  <li><a href="#">Quiz</a></li>
             </ul>
