Added Media, Quiz and Links pages and routing

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <ul id="hippoNavList" class="nav navbar-nav navbar-right collapse navbar-collapse">
                  <li><a href="/">Home</a></li>
                  <li><a href="/info">Info</a></li>
-                 <li><a href="#">Media</a></li>
-                 <li><a href="#">Quiz</a></li>
+                 <li><a href="/media">Media</a></li>
+                 <li><a href="/quiz">Quiz</a></li>
             </ul>
 		</div>
 	</nav>
@@ -45,7 +45,7 @@
 	<!-- Creating Footer for all pages -->
 	<footer class="hippoNav">
 		<div class="container">
-			<a href="#">Links</a>
+			<a href="/links">Links</a>
 			<a href="mailto:futoisaru@gmail.com">Contact Us</a>
 			<p>Created by Sean Thomas</p>
 		</div>
