--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular-route.min.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=Happy+Monkey" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Happy+Monkey|Lato" rel="stylesheet">
 </head>
 <body>
 	<!-- Creating Navigation Bar -->
