--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Title -->
 	<title>Smallroundears - A website dedicated to learning about Hippos</title>
 	<base href="/">
+	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<!-- My CSS -->
 	<link rel="stylesheet" type="text/css" href="css/hippo.css">
+	<!-- CDN for Bootstrap, JQuery and Angular Scripts -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular-route.min.js"></script>
+	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Happy+Monkey|Lato" rel="stylesheet">
 </head>
 <body>
@@ -47,7 +52,7 @@
 		<div class="container">
 			<a href="/links">Links</a>
 			<a href="mailto:futoisaru@gmail.com">Contact Us</a>
-			<p>Created by Sean Thomas</p>
+			<p id="footnote">Created by Sean Thomas</p>
 		</div>
 	</footer>
 
