--- a/jasmine_tests/SpecRunner.html
+++ b/jasmine_tests/SpecRunner.html
@@ -5,11 +5,11 @@
   <title>Jasmine code tests for Hipposite</title>
  
   <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.5.2/jasmine_favicon.png">
-  <link rel="stylesheet" href="lib/jasmine-2.5.2/jasmine.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.5.2/jasmine.css">
  
-  <script src="lib/jasmine-2.5.2/jasmine.js"></script>
-  <script src="lib/jasmine-2.5.2/jasmine-html.js"></script>
-  <script src="lib/jasmine-2.5.2/boot.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.5.2/jasmine.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.5.2/jasmine-html.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.5.2/boot.js"></script>
  
   <script src="src/quiz.js"></script>
  
