Change paths to be relative to hippo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Title -->
 	<title>Smallroundears - A website dedicated to learning about Hippos</title>
-	<base href="/">
+	<base href="/hippo/">
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<!-- My CSS -->
@@ -23,7 +23,7 @@
 	<nav class="navbar navbar-fixed-top hippoNav">
 		<div class="container">
 			<div class="navbar-header">
-				<a class="navbar-brand" id="hippoBrand" href="/">Smallroundears <img id="hippoLogo" src="images/hippologo.svg" alt="Hippo Logo" /></a>
+				<a class="navbar-brand" id="hippoBrand" href=".">Smallroundears <img id="hippoLogo" src="images/hippologo.svg" alt="Hippo Logo" /></a>
 			
 				<!-- Creating a collapsable menu for mobile devices -->
 				<button type="button" class="navbar-toggle" id="hippoNavButton" data-toggle="collapse" data-target="#hippoNavList">
@@ -35,10 +35,10 @@
 
             <!-- Menu -->
             <ul id="hippoNavList" class="nav navbar-nav navbar-right collapse navbar-collapse">
-                 <li><a href="/">Home</a></li>
-                 <li><a href="/info">Info</a></li>
-                 <li><a href="/media">Media</a></li>
-                 <li><a href="/quiz">Quiz</a></li>
+                 <li><a href=".">Home</a></li>
+                 <li><a href="info">Info</a></li>
+                 <li><a href="media">Media</a></li>
+                 <li><a href="quiz">Quiz</a></li>
             </ul>
 		</div>
 	</nav>
@@ -50,7 +50,7 @@
 	<!-- Creating Footer for all pages -->
 	<footer class="hippoNav">
 		<div class="container">
-			<a href="/links">Links</a>
+			<a href="links">Links</a>
 			<a href="mailto:futoisaru@gmail.com">Contact Us</a>
 			<p id="footnote">Created by Sean Thomas</p>
 		</div>
